--- a/app/i18n/de-DE/notifications.json
+++ b/app/i18n/de-DE/notifications.json
@@ -8,7 +8,7 @@
   "Detect lagged frames": "Verzögerte Frames erkennen",
   "Lagged frames threshold": "Verzögerte Frames Schwellenwert",
   "Detect dropped frames": "Ausgelassene Frames erkennen",
-  "Dropped frames threshold": "Ausgelassene Frames Schwelle",
+  "Dropped frames threshold": "Ausgelassene Frames Schwellenwert",
   "Show Notifications": "Benachrichtigungen anzeigen",
   "Restore Defaults": "Wiederherstellen der Standardeinstellungen",
   "Troubleshooter Notifications": "Fehlerbehebungs-Benachrichtigungen",
