--- a/app/i18n/de-DE/onboarding.json
+++ b/app/i18n/de-DE/onboarding.json
@@ -24,7 +24,7 @@
   "Applying stream settings ...": "Stream-Einstellungen werden übernommen...",
   "Applying general settings ...": "Allgemeine Einstellungen werden übernommen ...",
   "Optimize": "Optimieren",
-  "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "Wir verbinden mit OBS und importieren Deine vorherigen Einstellungen für einen reibungslosen Übergang.",
+  "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "Wir verbinden mit OBS und importieren Ihre vorherigen Einstellungen für einen reibungslosen Übergang.",
   "Initialzing ...": "Initialisiere ...",
   "Connecting to OBS ...": "Verbinde mit OBS ...",
   "Pulling settings ...": "Beziehe Einstellungen ...",
