--- a/app/i18n/de-DE/scenes.json
+++ b/app/i18n/de-DE/scenes.json
@@ -11,7 +11,7 @@
   "Are you sure you want to remove %{collectionName}?": "Sind Sie sicher, dass Sie %{collectionName} entfernen möchten?",
   "Create Scene Projector": "Szenen-Projektor erstellen",
   "Preview is disabled in performance mode": "Die Vorschau ist im Performance-Mode deaktiviert",
-  "Your preview is currently disabled": "Deine Vorschau ist zurzeit deaktiviert",
+  "Your preview is currently disabled": "Ihre Vorschau ist zurzeit deaktiviert",
   "Are you sure you want to remove %sceneName%?": "Sind Sie sicher, dass Sie %sceneName% entfernen möchten?",
   "Performance Mode": "Performance-Mode",
   "Create Output Projector": "Szenen-Projektor erstellen",
