--- a/app/i18n/de-DE/settings.json
+++ b/app/i18n/de-DE/settings.json
@@ -24,8 +24,8 @@
   "This action will restart the application. Continue?": "Diese Aktion wird die Anwendung neu starten. Möchten Sie fortfahren?",
   "Show confirmation dialog when starting streams": "Bestätigungsdialog anzeigen, wenn der Stream gestartet wird",
   "Show confirmation dialog when stopping streams": "Bestätigungsdialog anzeigen, wenn der Stream gestoppt wird",
-  "Automatically record when streaming": "Automatisch aufzeichnen während des Streamens ",
-  "Keep recording when stream stops": "Nach dem Stoppen des Streams weiter aufnehmen",
+  "Automatically record when streaming": "Während des Streamens automatisch aufzeichnen",
+  "Keep recording when stream stops": "Nach dem Stoppen des Streams weiter aufzeichnen",
   "Source Alignement Snapping": "Quellen-Anordnung an Gitter ausrichten",
   "Snap Sources to edge of screen": "Quellen am Bildschirmrand andocken",
   "Snap Sources to other sources": "Quellen an anderen Quellen andocken",
@@ -39,12 +39,12 @@
   "Recording": "Recording",
   "Recording Quality": "Aufnahmequalität",
   "Recording Format": "Aufnahmeformat",
-  "Custom Muxer Settings": "Benutzerdefinierte Muxer Einstellungen",
+  "Custom Muxer Settings": "Benutzerdefinierte Muxer-Einstellungen",
   "Enable Replay Buffer": "Replay-Puffer aktivieren",
-  "Base (Canvas) Resolution": "Basis (Canvas) Auflösung",
-  "Output (Scaled) Resolution": "Ausgabeauflösung (skaliert)",
+  "Base (Canvas) Resolution": "Basis-Auflösung (Canvas)",
+  "Output (Scaled) Resolution": "Ausgabe-Auflösung (skaliert)",
   "Downscale Filter": "Downscale-Filter",
-  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (schnellste, aber unscharf, wenn skaliert)",
+  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (Am schnellsten, aber unscharf, wenn skaliert)",
   "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (scharfe Skalierung, 16 samples)",
   "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (scharfe Skalierung, 32 samples)",
   "No elements found. Consider changing the search query.": "Keine Elemente gefunden. Erwägen Sie eine andere Sucheingabe.",
