--- a/app/i18n/de-DE/sources.json
+++ b/app/i18n/de-DE/sources.json
@@ -1,15 +1,15 @@
 {
   "Add Source": "Quelle hinzufügen",
-  "Add images to your scene.": "Fügen Sie ihrer Szene Bilder hinzu.",
-  "Add a slideshow of images to your scene.": "Fügen Sie ihrer Szene eine Diashow hinzu.",
-  "Add videos or sound clips to your scene.": "Fügen Sie Video- oder Audioclips Ihrer Szene hinzu.",
+  "Add images to your scene.": "Fügen Sie Ihrer Szene Bilder hinzu.",
+  "Add a slideshow of images to your scene.": "Fügen Sie Ihrer Szene eine Diashow hinzu.",
+  "Add videos or sound clips to your scene.": "Fügen Sie Ihrer Szene Video- oder Audioclips hinzu.",
   "Capture a specific window that's open on your computer.": "Erfassen Sie ein bestimmtes Fenster, welches auf Ihrem Computer geöffnet ist.",
   "Compatible with most modern browsers and programs": "Kompatibel mit den meisten modernen Browsern und Programmen",
-  "Select from your build in USB webcam or an external.": "Wählen Sie ihre eingebaute Webcam oder eine Externe aus.",
+  "Select from your build in USB webcam or an external.": "Wählen Sie Ihre eingebaute Webcam oder eine Externe aus.",
   "Built in webcam": "Eingebaute Webcam",
   "Logitech webcam": "Logitech Webcam",
   "Capture cards (Elgato, Avermedia, BlackMagic)": "Capture-Karten (Avermedia, BlackMagic, Elgato)",
-  "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "Erfasst Ihr gewähltes Systemwiedergabegerät um beispielsweise Musik oder Sprache abzuspielen.",
+  "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "Erfasst Ihr gewähltes Systemwiedergabegerät, um beispielsweise Musik oder Sprache abzuspielen.",
   "Desktop audio": "Systemwiedergabegerät",
   "Add a color to the background of your whole scene or just a part.": "Fügen Sie einem Teil der Szene oder der gesamten Szene eine Farbe hinzu.",
   "Allows you to add web-based content as a source, such as web pages and Flash SWFs.": "Erlaubt Ihnen web-basierten Inhalt wie Webseiten oder Flash SWFs hinzuzufügen.",
@@ -30,7 +30,7 @@
   "Other USB devices": "Sonstige USB-Geräte",
   "Capture the feed your decklink device is capturing.": "Erfasst die Aufnahme Ihres Decklink Gerätes.",
   "Works with most of the recent Blackmagic cards.": "Funktioniert mit den meisten aktuellen BlackMagic Karten.",
-  "Thanks viewers with notification popups.": "Bedanke Dich bei deinen Zuschauern mit Benachrichtigungs-Popups.",
+  "Thanks viewers with notification popups.": "Bedankt sich bei Ihren Zuschauern mit Benachrichtigungs-Popups.",
   "Donations": "Spenden",
   "Subscriptions": "Abonnements",
   "Follows": "Follows",
@@ -40,7 +40,7 @@
   "Include your channel's most recent events into your stream.": "Fügen Sie Ihrem Stream die neuesten Kanal-Events hinzu.",
   "Redemptions": "Einlösungen",
   "Donation Goal": "Spendenziel",
-  "Set a goal for your viewers to help you reach.": "Setzen Sie ihren Zuschauern ein Ziel damit Sie ihnen helfen können 1%Goal zu erreichen.",
+  "Set a goal for your viewers to help you reach.": "Setzen Sie Ihren Zuschauern ein Ziel, damit Sie ihnen helfen können 1%Goal zu erreichen.",
   "Follower Goal": "Followerziel",
   "Twitch Follows": "Twitch Follower",
   "Youtube Follows": "YouTube Abonnenten",
@@ -53,14 +53,14 @@
   "Include your channel's chat into your stream.": "Fügen Sie Ihrem Stream den Kanal-Chat hinzu.",
   "Twitch chat": "Twitch Chat",
   "Youtube chat": "YouTube Chat",
-  "The Jar": "Das Glas",
-  "The jar that catches bits, tips, and more.": "Das Glas fängt Bits, Spenden und mehr auf.",
+  "The Jar": "Das Spendenglas",
+  "The jar that catches bits, tips, and more.": "Das Weckglas fängt Bits, Spenden und mehr auf.",
   "Viewer Count": "Zuschauerzahl",
   "Show off your viewers from multiple platforms.": "Zeigen Sie Ihre Zuschauerzahlen von verschiedenen Plattformen an.",
   "Stream Boss": "Stream Boss",
   "Battle with bits to be the boss of the stream!": "Kämpfe mit Bits um der Boss im Stream zu sein!",
   "Credits": "Credits",
-  "Rolling credits to play at the end of your stream.": "Spiele Credits am Ende deines Streams ab.",
+  "Rolling credits to play at the end of your stream.": "Spielen Sie Credits am Ende Ihres Streams ab.",
   "New Followers": "Neue Follower",
   "New Subscribers": "Neue Abonnenten",
   "Cheers": "Cheers",
