--- a/app/i18n/fr-FR/filters.json
+++ b/app/i18n/fr-FR/filters.json
@@ -6,19 +6,19 @@
   "Scaling/Aspect Ratio": "Mise a l'échelle / Ratio d'Affichage",
   "Scroll": "Défilement",
   "Render Delay": "Délai d'affichage",
-  "Color Key": "Couleur d'incrustation",
+  "Color Key": "Couleur de clé",
   "Apply LUT": "Appliquer LUT",
   "Sharpen": "Affiner",
-  "Chroma Key": "Chroma Key",
-  "Video Delay (Async)": "Décalage vidéo",
+  "Chroma Key": "Clé chromatique",
+  "Video Delay (Async)": "Délai vidéo (Async)",
   "Noise Suppression": "Suppression du bruit",
-  "Noise Gate": "Noise Gate",
+  "Noise Gate": "Intervalle de bruit",
   "Compressor": "Compresseur",
   "VST 2.x Plugin": "Plugin VST 2.x",
-  "Face Mask Plugin": "Plugin Face Mask",
+  "Face Mask Plugin": "Plugin masque visage",
   "Filter type": "Type du filtre",
   "Filter name": "Nom du filtre",
-  "Add source filter": "Ajouter un filtre a la source",
-  "No filters applied": "Aucun filtres est actuellement ajoutés",
+  "Add source filter": "Ajouter le filtre source",
+  "No filters applied": "Aucun filtre appliqué",
   "Source filters": "Filtres de sources"
 }
