--- a/app/i18n/fr-FR/notifications.json
+++ b/app/i18n/fr-FR/notifications.json
@@ -7,11 +7,11 @@
   "Skipped frames threshold": "Seuil de détection des images ignorées",
   "Detect lagged frames": "Surveiller les images retardées",
   "Lagged frames threshold": "Seuil de détection des images retardées",
-  "Detect dropped frames": "Detect dropped frames",
-  "Dropped frames threshold": "Dropped frames threshold",
+  "Detect dropped frames": "Détecter les pertes d’images",
+  "Dropped frames threshold": "Seuil de perte d’images",
   "Show Notifications": "Afficher les notifications",
   "Restore Defaults": "Restaurer les paramètres par défaut",
-  "Troubleshooter Notifications": "Troubleshooter Notifications",
+  "Troubleshooter Notifications": "Notifications des pannes",
   "Click to open your Notifications window": "Cliquer pour ouvrir la fenêtre de notifications",
   "Click to read your unread Notifications": "Cliquer pour lire les notifications non lues",
   "New Notifications": "Nouvelle notification",
