--- a/app/i18n/fr-FR/sources.json
+++ b/app/i18n/fr-FR/sources.json
@@ -5,16 +5,16 @@
   "Add videos or sound clips to your scene.": "Ajouter des vidéos ou des clips audio à votre scène.",
   "Capture a specific window that's open on your computer.": "Capturer une fenêtre spécifique qui est ouverte sur votre ordinateur.",
   "Compatible with most modern browsers and programs": "Compatible avec les navigateurs plus modernes et les programmes",
-  "Select from your build in USB webcam or an external.": "Select from your build in USB webcam or an external.",
+  "Select from your build in USB webcam or an external.": "Sélectionnez à partir de votre webcam USB intégré ou externe.",
   "Built in webcam": "Webcam intégrée",
   "Logitech webcam": "Webcam Logitech",
   "Capture cards (Elgato, Avermedia, BlackMagic)": "Cartes de capture (Elgato, Avermedia, BlackMagic)",
   "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "Capture vos systèmes audio dans le but de jouer un son, comme une musique ou de la parole.",
-  "Desktop audio": "Desktop audio",
+  "Desktop audio": "Systèmes audio",
   "Add a color to the background of your whole scene or just a part.": "Ajouter une couleur à l’arrière-plan de votre scène entière ou seulement une partie.",
   "Allows you to add web-based content as a source, such as web pages and Flash SWFs.": "Vous permet d’ajouter du contenu web comme une source, telles que les pages web et Flash SWF.",
   "Websites": "Sites Web",
-  "Third party widget": "Third party widget",
+  "Third party widget": "Module tiers",
   "Add text to your scene and adjust its style.": "Ajouter du texte à votre scène et ajuster son style.",
   "System Fonts": "Police système",
   "System Sizes": "Taille de la police système",
@@ -28,117 +28,117 @@
   "Built in microphones": "Microphones intégré",
   "USB microphones": "Microphones USB",
   "Other USB devices": "Autres périphériques USB",
-  "Capture the feed your decklink device is capturing.": "Capture the feed your decklink device is capturing.",
+  "Capture the feed your decklink device is capturing.": "Capturer le flux qui est capturé par votre appareil decklink.",
   "Works with most of the recent Blackmagic cards.": "Fonctionne avec la plupart des cartes récentes Blackmagic.",
   "Thanks viewers with notification popups.": "Remercier les spectateurs avec des notifications pop-up.",
   "Donations": "Dons",
   "Subscriptions": "Abonnements",
   "Follows": "Follows",
   "Bits": "Bits",
-  "Hosts": "Hosts",
+  "Hosts": "Hébergements",
   "Show off your most recent donations to your viewers.": "Montrez vos dons les plus récents à vos spectateurs.",
   "Include your channel's most recent events into your stream.": "Inclure les événements les plus récents de votre chaîne dans votre stream.",
   "Redemptions": "Rachats",
   "Donation Goal": "Objectif de dons",
-  "Set a goal for your viewers to help you reach.": "Set a goal for your viewers to help you reach.",
+  "Set a goal for your viewers to help you reach.": "Fixer un objectif à vos spectateurs pour vous aider à l'atteindre.",
   "Follower Goal": "Objectif de followers",
-  "Twitch Follows": "Twitch Follows",
-  "Youtube Follows": "Youtube Follows",
-  "Mixer Follows": "Mixer Follows",
-  "Bit Goal": "Bit Goal",
-  "Twitch Bits": "Twitch Bits",
+  "Twitch Follows": "Followers Twitch",
+  "Youtube Follows": "Abonnés Youtube",
+  "Mixer Follows": "Followers Mixer",
+  "Bit Goal": "But de bit",
+  "Twitch Bits": "Bits Twitch",
   "Subscription Goal": "Objectif d'abonnés",
   "Youtube Subscribers": "Abonnés YouTube",
-  "Chatbox": "Chatbox",
+  "Chatbox": "Boîte de chat",
   "Include your channel's chat into your stream.": "Inclure le chat de votre chaîne sur votre stream.",
-  "Twitch chat": "Twitch chat",
+  "Twitch chat": "Chat Twitch",
   "Youtube chat": "Chat YouTube",
   "The Jar": "Le bocal",
   "The jar that catches bits, tips, and more.": "Un bocal qui attrape des bits, les dons et bien plus encore.",
   "Viewer Count": "Compteur de viewers",
-  "Show off your viewers from multiple platforms.": "Show off your viewers from multiple platforms.",
+  "Show off your viewers from multiple platforms.": "Montrez vos spectateurs à partir de plusieurs plates-formes.",
   "Stream Boss": "Boss du stream",
-  "Battle with bits to be the boss of the stream!": "Battle with bits to be the boss of the stream!",
-  "Credits": "Credits",
-  "Rolling credits to play at the end of your stream.": "Rolling credits to play at the end of your stream.",
-  "New Followers": "New Followers",
-  "New Subscribers": "New Subscribers",
+  "Battle with bits to be the boss of the stream!": "Bataille avec des bits pour être le patron du flux !",
+  "Credits": "Crédits",
+  "Rolling credits to play at the end of your stream.": "Crédit déroulant à jouer à la fin de votre flux.",
+  "New Followers": "Nouveaux followers",
+  "New Subscribers": "Nouveaux abonnés",
   "Cheers": "Cheers",
-  "Spin Wheel": "Spin Wheel",
-  "Spin the wheel to make a decision.": "Spin the wheel to make a decision.",
-  "The streamer manually triggers a spin anytime while they are live.": "The streamer manually triggers a spin anytime while they are live.",
-  "Allows you to add existing scene as a source": "Allows you to add existing scene as a source",
-  "Stream Label": "Stream Label",
-  "This is a placeholder description for streamlabels.": "This is a placeholder description for streamlabels.",
-  "New Cheers": "New Cheers",
-  "New Donations": "New Donations",
-  "All-Time Top Donator": "All-Time Top Donator",
-  "Weekly Top Donator": "Weekly Top Donator",
-  "Monthly Follows": "Monthly Follows",
-  "Many more": "Many more",
-  "Welcome to sources!": "Welcome to sources!",
-  "Browse through our Standard and Widget sources": "Browse through our Standard and Widget sources",
-  "Click a source to get more details about it": "Click a source to get more details about it",
-  "Standard": "Standard",
-  "Widgets": "Widgets",
-  "Alertbox": "Alertbox",
-  "Essential": "Essential",
-  "Event List": "Event List",
-  "Donation Ticker": "Donation Ticker",
-  "The source name is required": "The source name is required",
-  "Unable to add a source: the scene you are trying to add already contains your current scene": "Unable to add a source: the scene you are trying to add already contains your current scene",
-  "Add New Source": "Add New Source",
-  "Please enter the name of the source": "Please enter the name of the source",
-  "Add Existing Source": "Add Existing Source",
-  "Recommended": "Recommended",
-  "Please enter the name of the folder": "Please enter the name of the folder",
-  "Properties for %{sourceName}": "Properties for %{sourceName}",
-  "Supports": "Supports",
-  "Widget Type": "Widget Type",
-  "Configure": "Configure",
-  "Go To Widget Settings": "Go To Widget Settings",
-  "Test Widgets": "Test Widgets",
-  "Hide Test Widgets": "Hide Test Widgets",
-  "Add Folder": "Add Folder",
-  "Remove Sources": "Remove Sources",
-  "Setup Source Properties": "Setup Source Properties",
-  "Rename Folder": "Rename Folder",
-  "Name Folder": "Name Folder",
-  "Rename Source": "Rename Source",
-  "Name Source": "Name Source",
-  "Layer filters": "Layer filters",
-  "Add layer filter": "Add layer filter",
-  "Reset Transform": "Reset Transform",
-  "Flip Vertical": "Flip Vertical",
-  "Flip Horizontal": "Flip Horizontal",
-  "Stretch to Screen": "Stretch to Screen",
-  "Fit to Screen": "Fit to Screen",
-  "Center on Screen": "Center on Screen",
-  "Rotate 90 Degrees CW": "Rotate 90 Degrees CW",
-  "Rotate 90 Degrees CCW": "Rotate 90 Degrees CCW",
-  "Rotate 180 Degrees": "Rotate 180 Degrees",
-  "Paste (Reference)": "Paste (Reference)",
-  "Paste (Duplicate)": "Paste (Duplicate)",
-  "Invert Selection": "Invert Selection",
-  "Transform": "Transform",
-  "Export Widget": "Export Widget",
-  "Copy Filters": "Copy Filters",
-  "Paste Filters": "Paste Filters",
-  "Properties": "Properties",
-  "Lock Sources": "Lock Sources",
-  "Unlock Sources": "Unlock Sources",
-  "Group into Folder": "Group into Folder",
-  "Ungroup Folder": "Ungroup Folder",
-  "Group into Scene": "Group into Scene",
-  "Ungroup Scene": "Ungroup Scene",
-  "Create Source Projector": "Create Source Projector",
-  "Click \"Add Source\" when you're ready to add it to your scene": "Click \"Add Source\" when you're ready to add it to your scene",
-  "BrowserSource": "BrowserSource",
-  "NDI source": "NDI source",
-  "Use Google Font": "Use Google Font",
-  "Center Horizontal": "Center Horizontal",
-  "Center Vertical": "Center Vertical",
-  "Unhide All": "Unhide All",
-  "Cloud Backup: All media and sources are backed up in the cloud": "Cloud Backup: All media and sources are backed up in the cloud",
-  "Cloud Backup: Your media and sources are being synced with the cloud": "Cloud Backup: Your media and sources are being synced with the cloud"
+  "Spin Wheel": "Faites tourner la roue",
+  "Spin the wheel to make a decision.": "Faites tourner la roue pour prendre une décision.",
+  "The streamer manually triggers a spin anytime while they are live.": "Le streamer déclenche manuellement une rotation à tout moment pendant le direct.",
+  "Allows you to add existing scene as a source": "Vous permet d'ajouter une scène existante en tant que source",
+  "Stream Label": "Label du flux",
+  "This is a placeholder description for streamlabels.": "Ceci est un espace réservé à la description des streamlabels.",
+  "New Cheers": "Nouveau Cheers",
+  "New Donations": "Nouveaux dons",
+  "All-Time Top Donator": "Donateur de tous les temps",
+  "Weekly Top Donator": "Donateur de la semaine",
+  "Monthly Follows": "Follows mensuel",
+  "Many more": "Beaucoup plus",
+  "Welcome to sources!": "Bienvenue aux sources!",
+  "Browse through our Standard and Widget sources": "Parcourez nos sources Standard et Module",
+  "Click a source to get more details about it": "Cliquez sur une source pour obtenir plus de détails à son sujet",
+  "Standard": "La norme",
+  "Widgets": "Modules",
+  "Alertbox": "Boîte d'alerte",
+  "Essential": "Essentiel",
+  "Event List": "Liste des événements",
+  "Donation Ticker": "Ticker de Don",
+  "The source name is required": "Le nom de la source est requis",
+  "Unable to add a source: the scene you are trying to add already contains your current scene": "Impossible d'ajouter une source: la scène que vous essayez d'ajouter contient déjà votre scène actuelle",
+  "Add New Source": "Ajouter une nouvelle Source",
+  "Please enter the name of the source": "Veuillez entrer le nom de la source",
+  "Add Existing Source": "Ajouter une Source existante",
+  "Recommended": "Recommandé",
+  "Please enter the name of the folder": "Veuillez entrer le nom du dossier",
+  "Properties for %{sourceName}": "Propriétés pour %{sourceName}",
+  "Supports": "Supporte",
+  "Widget Type": "Type de module",
+  "Configure": "Configurer",
+  "Go To Widget Settings": "Aller aux paramètres du module",
+  "Test Widgets": "Tester les modules",
+  "Hide Test Widgets": "Masquer les modules de test",
+  "Add Folder": "Ajouter un dossier",
+  "Remove Sources": "Supprimer Sources",
+  "Setup Source Properties": "Installer les propriétés de la source",
+  "Rename Folder": "Renommer le dossier",
+  "Name Folder": "Nom du dossier",
+  "Rename Source": "Renommer la Source",
+  "Name Source": "Nom de la Source",
+  "Layer filters": "Calques filtre",
+  "Add layer filter": "Ajouter un calque filtre",
+  "Reset Transform": "Réinitialiser la transformation",
+  "Flip Vertical": "Retourner verticalement",
+  "Flip Horizontal": "Retourner horizontalement",
+  "Stretch to Screen": "Étirer à l'écran",
+  "Fit to Screen": "S'adapter à l'écran",
+  "Center on Screen": "Centrer sur l’écran",
+  "Rotate 90 Degrees CW": "Rotation 90 ° horaire",
+  "Rotate 90 Degrees CCW": "Rotation 90 ° anti-horaire",
+  "Rotate 180 Degrees": "Rotation 180 °",
+  "Paste (Reference)": "Coller (Référence)",
+  "Paste (Duplicate)": "Coller (Dupliquer)",
+  "Invert Selection": "Inverser la sélection",
+  "Transform": "Transformer",
+  "Export Widget": "Exporter le module",
+  "Copy Filters": "Copier les filtres",
+  "Paste Filters": "Coller les filtres",
+  "Properties": "Propriétés",
+  "Lock Sources": "Verrouiller les Sources",
+  "Unlock Sources": "Déverrouiller les Sources",
+  "Group into Folder": "Grouper dans le dossier",
+  "Ungroup Folder": "Dégrouper le dossier",
+  "Group into Scene": "Grouper dans la scène",
+  "Ungroup Scene": "Dégrouper la scène",
+  "Create Source Projector": "Créer un projecteur de Source",
+  "Click \"Add Source\" when you're ready to add it to your scene": "Cliquez sur « Ajouter Source » lorsque vous êtes prêt à l'ajouter à votre scène",
+  "BrowserSource": "Source du navigateur",
+  "NDI source": "Source NDI",
+  "Use Google Font": "Utiliser les polices Google",
+  "Center Horizontal": "Centrer Horizontalement",
+  "Center Vertical": "Centrer Verticalement",
+  "Unhide All": "Afficher tout",
+  "Cloud Backup: All media and sources are backed up in the cloud": "La sauvegarde Cloud : Toutes les sources et les médias sont sauvegardés dans le nuage",
+  "Cloud Backup: Your media and sources are being synced with the cloud": "La sauvegarde Cloud : Vos médias et sources sont synchronisés avec le nuage"
 }
