--- a/app/i18n/ko-KR/settings.json
+++ b/app/i18n/ko-KR/settings.json
@@ -1,26 +1,26 @@
 {
-  "General": "General",
-  "Stream": "Stream",
-  "Output": "Output",
-  "Audio": "Audio",
-  "Video": "Video",
-  "Hotkeys": "Hotkeys",
-  "Advanced": "Advanced",
-  "Overlays": "Overlays",
-  "Notifications": "Notifications",
-  "Appearance": "Appearance",
-  "Remote Control": "Remote Control",
-  "Night mode": "Night mode",
-  "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.",
-  "Show Cache Directory": "Show Cache Directory",
-  "Delete Cache and Restart": "Delete Cache and Restart",
-  "Upload Cache to Developers": "Upload Cache to Developers",
-  "Restart Streamlabels Session": "Restart Streamlabels Session",
-  "Run Auto Optimizer": "Run Auto Optimizer",
-  "Confirm stream title and game before going live": "Confirm stream title and game before going live",
-  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!",
-  "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.",
-  "Streamlabels session has been succesfully restarted!": "Streamlabels session has been succesfully restarted!",
+  "General": "일반",
+  "Stream": "스트림",
+  "Output": "출력",
+  "Audio": "오디오",
+  "Video": "비디오",
+  "Hotkeys": "단축키",
+  "Advanced": "고급",
+  "Overlays": "오버레이",
+  "Notifications": "알림",
+  "Appearance": "외관",
+  "Remote Control": "원격 제어",
+  "Night mode": "야간 모드",
+  "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "이상한 동작을 발생 하는 경우 캐시 디렉터리 삭제 시도해보세요.  이 장면 구성 및 설정, 없어집니다. 하지만 몇 가지 안정성 문제를 해결할 수 있습니다.",
+  "Show Cache Directory": "캐시 디렉터리 표시",
+  "Delete Cache and Restart": "삭제 캐시 및 다시 시작",
+  "Upload Cache to Developers": "개발자에게 캐시를 업로드",
+  "Restart Streamlabels Session": "Streamlabels 세션을 다시 시작",
+  "Run Auto Optimizer": "자동 최적화 실행",
+  "Confirm stream title and game before going live": "라이브 전에 스트림 제목 및 게임 확인",
+  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "경고! 모든 장면, 원본 및 설정을 잃게 됩니다. 이것은 취소할 수 없습니다!",
+  "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "캐시 디렉토리를 성공적으로 업로드 되었습니다.  파일 이름 %{file} 이 클립보드에 복사 되었습니다.   디스코드에다 붙여넣은 다음에 개발자를 태그 해주세요.",
+  "Streamlabels session has been succesfully restarted!": "Streamlabels 세션은 성공적으로 다시 시작 되었습니다!",
   "This action will restart the application. Continue?": "This action will restart the application. Continue?",
   "Show confirmation dialog when starting streams": "Show confirmation dialog when starting streams",
   "Show confirmation dialog when stopping streams": "Show confirmation dialog when stopping streams",
