--- a/app/i18n/nl-NL/common.json
+++ b/app/i18n/nl-NL/common.json
@@ -1,41 +1,41 @@
 {
-  "Scene": "Scene",
-  "Scenes": "Scenes",
-  "Source": "Source",
-  "Sources": "Sources",
+  "Scene": "Scène",
+  "Scenes": "Scènes",
+  "Source": "Bron",
+  "Sources": "Bronnen",
   "Dashboard": "Dashboard",
-  "Library": "Library",
-  "Editor": "Editor",
+  "Library": "Bibliotheek",
+  "Editor": "Bewerk",
   "Live": "Live",
-  "Bug Report": "Bug Report",
-  "Settings": "Settings",
-  "That name is already taken": "That name is already taken",
-  "Search": "Search",
-  "Create New": "Create New",
-  "Language": "Language",
-  "Name is required": "Name is required",
-  "Duplicate": "Duplicate",
-  "Rename": "Rename",
-  "Remove": "Remove",
+  "Bug Report": "Rapporteer bug",
+  "Settings": "Instellingen",
+  "That name is already taken": "De naam is al in gebruik",
+  "Search": "Zoeken",
+  "Create New": "Creëer nieuw",
+  "Language": "Taal",
+  "Name is required": "Naam is vereist",
+  "Duplicate": "Dupliceer",
+  "Rename": "Hernoem",
+  "Remove": "Verwijder",
   "Filters": "Filters",
   "CPU": "CPU",
-  "Dropped Frames": "Dropped Frames",
-  "Cancel": "Cancel",
-  "Done": "Done",
-  "Are you sure you want to log out?": "Are you sure you want to log out?",
-  "Name": "Name",
-  "Delete": "Delete",
-  "Continue": "Continue",
-  "Login": "Login",
-  "Yes": "Yes",
-  "No": "No",
+  "Dropped Frames": "Gedropte frames",
+  "Cancel": "Annuleren",
+  "Done": "Gereed",
+  "Are you sure you want to log out?": "Weet u zeker dat u wilt uitloggen?",
+  "Name": "Naam",
+  "Delete": "Verwijderen",
+  "Continue": "Doorgaan",
+  "Login": "Inloggen",
+  "Yes": "Ja",
+  "No": "Nee",
   "OK": "OK",
-  "Confirm": "Confirm",
-  "Themes": "Themes",
-  "Show": "Show",
-  "Hide": "Hide",
-  "Copy": "Copy",
-  "Select All": "Select All",
-  "Select Option": "Select Option",
-  "Browse": "Browse"
+  "Confirm": "Bevestigen",
+  "Themes": "Thema's",
+  "Show": "Toon",
+  "Hide": "Verberg",
+  "Copy": "Kopieëren",
+  "Select All": "Alles selecteren",
+  "Select Option": "Selecteer optie",
+  "Browse": "Bladeren"
 }
