--- a/app/i18n/nl-NL/customization.json
+++ b/app/i18n/nl-NL/customization.json
@@ -1,7 +1,7 @@
 {
-  "Show the live dock (chat) on the left side": "Show the live dock (chat) on the left side",
-  "Chat Text Size": "Chat Text Size",
-  "Chat Width": "Chat Width",
-  "Enable BetterTTV emotes for Twitch": "Enable BetterTTV emotes for Twitch",
-  "Enable FrankerFaceZ emotes for Twitch": "Enable FrankerFaceZ emotes for Twitch"
+  "Show the live dock (chat) on the left side": "Toon de live-dock (chat) aan de linkerzijde",
+  "Chat Text Size": "Chat tekst grootte",
+  "Chat Width": "Chat breedte",
+  "Enable BetterTTV emotes for Twitch": "BetterTTV emotes voor Twitch inschakelen",
+  "Enable FrankerFaceZ emotes for Twitch": "FrankerFaceZ emotes voor Twitch inschakelen"
 }
