--- a/app/i18n/nl-NL/settings.json
+++ b/app/i18n/nl-NL/settings.json
@@ -1,16 +1,16 @@
 {
-  "General": "General",
+  "General": "Algemeen",
   "Stream": "Stream",
-  "Output": "Output",
+  "Output": "Uitvoer",
   "Audio": "Audio",
   "Video": "Video",
-  "Hotkeys": "Hotkeys",
-  "Advanced": "Advanced",
+  "Hotkeys": "Sneltoetsen",
+  "Advanced": "Gevanceerd",
   "Overlays": "Overlays",
-  "Notifications": "Notifications",
-  "Appearance": "Appearance",
-  "Remote Control": "Remote Control",
-  "Night mode": "Night mode",
+  "Notifications": "Notificaties",
+  "Appearance": "Uitstraling",
+  "Remote Control": "Afstandsbediening",
+  "Night mode": "Nacht modus",
   "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.",
   "Show Cache Directory": "Show Cache Directory",
   "Delete Cache and Restart": "Delete Cache and Restart",
@@ -37,17 +37,17 @@
   "Encoder Preset (Higher = Less CPU)": "Encoder Preset (Higher = Less CPU)",
   "Generate File Name without Space": "Generate File Name without Space",
   "Recording": "Recording",
-  "Recording Quality": "Recording Quality",
-  "Recording Format": "Recording Format",
+  "Recording Quality": "Opname kwaliteit",
+  "Recording Format": "Opname formaat",
   "Custom Muxer Settings": "Custom Muxer Settings",
   "Enable Replay Buffer": "Enable Replay Buffer",
   "Base (Canvas) Resolution": "Base (Canvas) Resolution",
   "Output (Scaled) Resolution": "Output (Scaled) Resolution",
   "Downscale Filter": "Downscale Filter",
-  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (Fastest, but blurry if scaling)",
-  "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (Sharpened scaling, 16 samples)",
-  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (Sharpened scaling, 32 samples)",
-  "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query.",
+  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (snelste maar wazig tijdens schaling)",
+  "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (scherper schalen, 16 samples)",
+  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (scherper schalen, 32 samples)",
+  "No elements found. Consider changing the search query.": "Geen elementen gevonden, pas je zoek opdracht aan.",
   "Do not back up my media files in the cloud (requires app restart)": "Do not back up my media files in the cloud (requires app restart)",
   "FPS Type": "FPS Type",
   "Common FPS Values": "Common FPS Values",
