--- a/app/i18n/de-DE/audio.json
+++ b/app/i18n/de-DE/audio.json
@@ -4,9 +4,9 @@
   "Downmix to Mono": "Downmix auf Mono",
   "Sync Offset (ms)": "Sync-Offset (ms)",
   "Audio Monitoring": "Audio-Monitoring",
-  "Monitor Off": "Überwachung aus",
-  "Monitor Only (mute output)": "Nur Überwachung (Ausgang stummschalten)",
-  "Monitor and Output": "Überwachung und Ausgang",
+  "Monitor Off": "Monitoring aus",
+  "Monitor Only (mute output)": "Nur Monitoring (Ausgang stummschalten)",
+  "Monitor and Output": "Monitoring und Ausgang",
   "Tracks": "Spuren",
   "Advanced Audio Settings": "Erweiterte Audio-Einstellungen",
   "Volume ( % )": "Lautstärke (%)",
