--- a/app/i18n/de-DE/troubleshooter.json
+++ b/app/i18n/de-DE/troubleshooter.json
@@ -1,26 +1,26 @@
 {
   "Troubleshooter": "Ratgeber",
-  "Open Settings": "Open Settings",
-  " Streamlabs OBS has detected dropped frames": " Streamlabs OBS has detected dropped frames",
-  "What does this mean?": "What does this mean?",
-  " Some frames have not been uploaded. This problem is usually related to a poor network connection.": " Some frames have not been uploaded. This problem is usually related to a poor network connection.",
-  "What can I do?": "What can I do?",
-  "Check the health of your Internet connection": "Check the health of your Internet connection",
-  "Change your ingest server": "Change your ingest server",
-  "If none of these worked, lower your bitrate": "If none of these worked, lower your bitrate",
-  "Streamlabs OBS has detected skipped frames": "Streamlabs OBS has detected skipped frames",
-  "Some frames have not been encoded.": "Some frames have not been encoded.",
-  "This problem is usually due to high CPU usage or unsuitable encoder settings.": "This problem is usually due to high CPU usage or unsuitable encoder settings.",
-  "Lower your encoder settings (preset)": "Lower your encoder settings (preset)",
-  "Ensure that you don't have any other applications open that are heavy on your CPU": "Ensure that you don't have any other applications open that are heavy on your CPU",
-  "Enable performance mode in the Editor context menu": "Enable performance mode in the Editor context menu",
-  "Streamlabs OBS has detected lagged frames": "Streamlabs OBS has detected lagged frames",
-  "Some frames took too long to get rendered.": "Some frames took too long to get rendered.",
-  "Usually the problem is related to your game using up too many GPU resources.": "Usually the problem is related to your game using up too many GPU resources.",
-  "When this happens, Streamlabs OBS does not have any resources left over to render frames.": "When this happens, Streamlabs OBS does not have any resources left over to render frames.",
-  "Cap your in-game framerate": "Cap your in-game framerate",
-  "Enable VSync in your game": "Enable VSync in your game",
-  "Disable FreeSync or GSync in your Driver": "Disable FreeSync or GSync in your Driver",
-  "Lower graphics settings until you stop lagging frames": "Lower graphics settings until you stop lagging frames",
-  "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)": "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)"
+  "Open Settings": "Einstellungen öffnen",
+  " Streamlabs OBS has detected dropped frames": " Streamlabs OBS hat verworfene Frames erkannt",
+  "What does this mean?": "Was bedeutet das?",
+  " Some frames have not been uploaded. This problem is usually related to a poor network connection.": " Einige Frames wurden nicht übertragen. Dies hängt meist mit einer schwachen Internetverbindung zusammen.",
+  "What can I do?": "Was kann ich tun?",
+  "Check the health of your Internet connection": "Überprüfen Sie Ihre Internetverbindung",
+  "Change your ingest server": "Wechseln Sie auf einen anderen Ingest-Server",
+  "If none of these worked, lower your bitrate": "Wenn keine dieser Lösungen geholfen hat, senken Sie Ihre Bitrate",
+  "Streamlabs OBS has detected skipped frames": "Streamlabs OBS hat übersprungene Frames erkannt",
+  "Some frames have not been encoded.": "Einige Frames wurden nicht encodiert.",
+  "This problem is usually due to high CPU usage or unsuitable encoder settings.": "Dieses Problem wird in der Regel durch hohe CPU-Auslastung oder ungeeignete Encoder-Einstellungen verursacht.",
+  "Lower your encoder settings (preset)": "Senken Sie Ihre Encoder-Einstellungen (Voreinstellung)",
+  "Ensure that you don't have any other applications open that are heavy on your CPU": "Stellen Sie sicher, dass Sie keine weiteren Programme geöffnet haben, welche Ihre CPU zusätzlich auslasten",
+  "Enable performance mode in the Editor context menu": "Performance-Modus im Editor Kontextmenü aktivieren",
+  "Streamlabs OBS has detected lagged frames": "Streamlabs OBS hat verzögerte Bilder entdeckt",
+  "Some frames took too long to get rendered.": "Einige Frames brauchten zu lange um gerendert zu werden.",
+  "Usually the problem is related to your game using up too many GPU resources.": "Das Problem wird meist dadurch verursacht, dass das ausgewählte Spiel zu viele GPU-Ressourcen benötigt.",
+  "When this happens, Streamlabs OBS does not have any resources left over to render frames.": "Wenn dies geschieht, hat Streamlabs OBS nicht genügend Ressourcen übrig, um die Frames zu rendern.",
+  "Cap your in-game framerate": "Die Ingame-Framerate begrenzen",
+  "Enable VSync in your game": "VSync im Spiel aktivieren",
+  "Disable FreeSync or GSync in your Driver": "FreeSync oder GSync im Treiber deaktivieren",
+  "Lower graphics settings until you stop lagging frames": "Die Grafikeinstellungen im Spiel so weit herunterstellen, bis die verzögerten Bilder aufhören",
+  "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)": "Deaktivieren Sie die Hardware-Decodierung bei allen Medien Quellen (Dies erhöht leicht die CPU-Last gegenüber der GPU-Last)"
 }
