--- a/app/i18n/fr-FR/hotkeys.json
+++ b/app/i18n/fr-FR/hotkeys.json
@@ -3,13 +3,13 @@
   "Stop Streaming": "Arrêter la diffusion",
   "Start Recording": "Commencer l'enregistrement",
   "Stop Recording": "Arrêter l'enregistrement",
-  "Switch to scene": "Switch to scene",
+  "Switch to scene": "Passer à la scène",
   "Show %{sourcename}": "Afficher",
   "Hide %{sourcename}": "Masquer",
-  "Mute": "Désavtivé le son",
+  "Mute": "Désactivé le son",
   "Unmute": "Activé le son",
   "Push to Mute": "Appuyer pour désactiver le son",
-  "Push to Talk": "Appuyer pour activer le son",
+  "Push to Talk": "Appuyer pour Parler",
   "Enable Studio Mode": "Activer le Mode Studio",
   "Disable Studio Mode": "Désactivé le Mode Studio",
   "Transition (Studio Mode)": "Transition (Mode Studio)"
