--- a/app/i18n/fr-FR/onboarding.json
+++ b/app/i18n/fr-FR/onboarding.json
@@ -1,16 +1,16 @@
 {
-  "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can": "Nous améliorons nos systèmes. Dans le cadre du processus de migration, nous avons besoin de vous authentifier à nouveaux. Pour quelques questions, veuillez",
+  "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can": "Nous améliorons nos systèmes. Dans le cadre du processus de migration, nous avons besoin que vous vous authentifiez à nouveau. Si vous avez des questions, vous pouvez",
   "contact support.": "contacter le support.",
   "Sign in with your Twitch or Youtube account to get started with Streamlabs": "Connectez-vous avec votre compte Twitch ou Youtube afin d'être pret à utiliser Streamlabs",
   "Select an OBS profile to import": "Sélctionnez un profile OBS à importer",
   "Import from OBS": "Impoter depuis OBS",
-  "Start Fresh": "Commencer depuis rien",
+  "Start Fresh": "Recommencer",
   "Importing": "En cours d'importation",
   "Successfully Imported": "Succès de l'importation",
-  "Importing your scenes and sources": "Scènes et souces en cours d'importation",
-  "All scenes, sources and settings have been imported.": "Toues les scènes, sources et paramètres de configuration ont été importé.",
+  "Importing your scenes and sources": "Importer vos scènes et sources",
+  "All scenes, sources and settings have been imported.": "Toutes les scènes, les sources et les paramètres ont été importées.",
   "Import your scenes and your settings from OBS with a simple click, or start fresh.": "Importez vos scenes et paramètres de configuration depuis OBS avec un simple clique, ou commencez depuis rien.",
-  "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.": "Cliquez ci-dessous et nous alyzerons votre connection Internet et votre machine afain d'appliquer les meilleurs paramètres possible.",
+  "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.": "Cliquez ci-dessous et nous analyserons votre connection Internet et votre machine afain d'appliquer les meilleurs paramètres possible.",
   "Start": "Commencer",
   "Rather do this manually?": "Plutôt le faire manuellement?",
   "Setup later": "Configurer plus tard",
@@ -23,7 +23,7 @@
   "Reverting to defaults ...": "Rétablissement des valeurs par défaut ...",
   "Applying stream settings ...": "Applications des paramètres de diffusion ...",
   "Applying general settings ...": "Applications des paramètres généraux ...",
-  "Optimize": "Optimisez",
+  "Optimize": "Optimiser",
   "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "Nous nous connectons à OBS et retrouvons vos précédent paramètres pour une convertion rapide.",
   "Initialzing ...": "Initilisation ...",
   "Connecting to OBS ...": "Connection à OBS ...",
