--- a/app/i18n/fr-FR/source-props.json
+++ b/app/i18n/fr-FR/source-props.json
@@ -1,12 +1,12 @@
 {
     "Image": "Image",
     "Color Source": "Source de couleur",
-    "Browser Source": "Browser Source",
-    "Media Source": "Source multimédia",
-    "Image Slide Show": "Diaporama",
+    "Browser Source": "Source du navigateur",
+    "Media Source": "Source de média",
+    "Image Slide Show": "Image-diaporama",
     "Text (GDI+)": "Texte (GDI+)",
     "Text (FreeType 2)": "Texte (FreeType 2)",
-    "Display Capture": "Capture de l'écran",
+    "Display Capture": "Capture d’écran",
     "Window Capture": "Capture de fenêtre",
     "Game Capture": "Capture de jeu",
     "Video Capture Device": "Périphérique de capture vidéo",
