--- a/app/i18n/fr-FR/widgets.json
+++ b/app/i18n/fr-FR/widgets.json
@@ -1,25 +1,25 @@
 {
-  "Add Widgets": "Add Widgets",
-  "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.",
-  "Thanks viewers with notification popups": "Thanks viewers with notification popups",
-  "Most recent events into your stream": "Most recent events into your stream",
-  "A jar that catches bits, tips, and more": "A jar that catches bits, tips, and more",
-  "Your channel's chat in your stream": "Your channel's chat in your stream",
-  "Show off most recent donations to viewers": "Show off most recent donations to viewers",
-  "Give your viewers a donation target to help you reach": "Give your viewers a donation target to help you reach",
-  "Give your viewers a follower target to help you reach": "Give your viewers a follower target to help you reach",
-  "Give your viewers a bit target to help you reach": "Give your viewers a bit target to help you reach",
-  "Give your viewers a subscriber target to help you reach": "Give your viewers a subscriber target to help you reach",
-  "Show off how many viewers you have from multiple platforms": "Show off how many viewers you have from multiple platforms",
-  "Give your viewers an opportunity of becoming a boss": "Give your viewers an opportunity of becoming a boss",
-  "Rolling credits at the end of your stream": "Rolling credits at the end of your stream",
-  "Add %{widgetscount} Widgets": "Add %{widgetscount} Widgets",
+  "Add Widgets": "Ajouter des modules",
+  "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "Sélectionnez les widgets Streamlabs que vous souhaitez activer pour votre flux. Ceux-ci seront automatiquement ajoutés à votre scène.",
+  "Thanks viewers with notification popups": "Remercier les spectateurs avec des notifications pop-up",
+  "Most recent events into your stream": "Les événements les plus récents dans votre flux",
+  "A jar that catches bits, tips, and more": "Un pot qui attrape des bits, des dons, et plus",
+  "Your channel's chat in your stream": "Le chat de votre chaîne dans votre flux",
+  "Show off most recent donations to viewers": "Montrer les dons les plus récents aux téléspectateurs",
+  "Give your viewers a donation target to help you reach": "Donnez à vos spectateurs un objectif de don pour vous aider à l'atteindre",
+  "Give your viewers a follower target to help you reach": "Donnez à vos spectateurs une cible de follower pour vous aider à atteindre",
+  "Give your viewers a bit target to help you reach": "Donnez à vos spectateurs une cible de bit pour vous aider à l'atteindre",
+  "Give your viewers a subscriber target to help you reach": "Donnez à vos téléspectateurs une cible d'abonnés pour vous aider à l'atteindre",
+  "Show off how many viewers you have from multiple platforms": "Montrez combien de spectateurs vous avez sur plusieurs plateformes",
+  "Give your viewers an opportunity of becoming a boss": "Donner à vos spectateurs l’occasion de devenir un boss",
+  "Rolling credits at the end of your stream": "Dérouler les crédits à la fin de votre flux",
+  "Add %{widgetscount} Widgets": "Ajouter %{widgetscount} Widgets",
   "Rather do this manually?": "Plutôt le faire manuellement?",
   "Setup later": "Configurer plus tard",
-  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "Widget Theme installed & activated. Click here to manage your Widget Profiles.",
+  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "Module Thème installé et activé. Cliquez ici pour gérer vos profils de module.",
   "Follow": "Follow",
-  "Subscription": "Subscription",
-  "Donation": "Donation",
+  "Subscription": "Abonnement",
+  "Donation": "Don",
   "Bits": "Bits",
-  "Host": "Host"
+  "Host": "Hébergement"
 }
