--- a/app/i18n/nl-NL/filters.json
+++ b/app/i18n/nl-NL/filters.json
@@ -1,24 +1,24 @@
 {
-  "Image Mask/Blend": "Image Mask/Blend",
-  "Crop/Pad": "Crop/Pad",
+  "Image Mask/Blend": "Afbeelding-masker/Mengen",
+  "Crop/Pad": "Bijsnijden/Aanvullen",
   "Gain": "Gain",
-  "Color Correction": "Color Correction",
-  "Scaling/Aspect Ratio": "Scaling/Aspect Ratio",
-  "Scroll": "Scroll",
-  "Render Delay": "Render Delay",
-  "Color Key": "Color Key",
-  "Apply LUT": "Apply LUT",
-  "Sharpen": "Sharpen",
+  "Color Correction": "Kleurcorrectie",
+  "Scaling/Aspect Ratio": "Schalen/Verhouding",
+  "Scroll": "Scrollen",
+  "Render Delay": "Rendervertraging",
+  "Color Key": "Kleur Key",
+  "Apply LUT": "LUT Toepassen",
+  "Sharpen": "Verscherpen",
   "Chroma Key": "Chroma Key",
-  "Video Delay (Async)": "Video Delay (Async)",
-  "Noise Suppression": "Noise Suppression",
+  "Video Delay (Async)": "Video Vertraging (Async)",
+  "Noise Suppression": "Ruisonderdrukking",
   "Noise Gate": "Noise Gate",
   "Compressor": "Compressor",
   "VST 2.x Plugin": "VST 2.x Plugin",
-  "Face Mask Plugin": "Face Mask Plugin",
+  "Face Mask Plugin": "Gezichtsmasker",
   "Filter type": "Filter type",
-  "Filter name": "Filter name",
-  "Add source filter": "Add source filter",
-  "No filters applied": "No filters applied",
-  "Source filters": "Source filters"
+  "Filter name": "Filter naam",
+  "Add source filter": "Bron filter toevoegen",
+  "No filters applied": "Geen filters toegepast",
+  "Source filters": "Bron filters"
 }
