--- a/app/i18n/nl-NL/hotkeys.json
+++ b/app/i18n/nl-NL/hotkeys.json
@@ -1,16 +1,16 @@
 {
-  "Start Streaming": "Start Streaming",
-  "Stop Streaming": "Stop Streaming",
-  "Start Recording": "Start Recording",
-  "Stop Recording": "Stop Recording",
-  "Switch to scene": "Switch to scene",
-  "Show %{sourcename}": "Show %{sourcename}",
-  "Hide %{sourcename}": "Hide %{sourcename}",
+  "Start Streaming": "Stream starten",
+  "Stop Streaming": "Stream stoppen",
+  "Start Recording": "Opname starten",
+  "Stop Recording": "Opname stoppen",
+  "Switch to scene": "Wissel naar scène",
+  "Show %{sourcename}": "Toon %{sourcename}",
+  "Hide %{sourcename}": "Verberg %{sourcename}",
   "Mute": "Mute",
   "Unmute": "Unmute",
-  "Push to Mute": "Push to Mute",
-  "Push to Talk": "Push to Talk",
-  "Enable Studio Mode": "Enable Studio Mode",
-  "Disable Studio Mode": "Disable Studio Mode",
-  "Transition (Studio Mode)": "Transition (Studio Mode)"
+  "Push to Mute": "Push-to-mute",
+  "Push to Talk": "Push-to-talk",
+  "Enable Studio Mode": "Studio Mode inschakelen",
+  "Disable Studio Mode": "Studio Mode uitschakelen",
+  "Transition (Studio Mode)": "Overgang (Studio Mode)"
 }
