--- a/app/i18n/nl-NL/onboarding.json
+++ b/app/i18n/nl-NL/onboarding.json
@@ -1,39 +1,39 @@
 {
-  "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can": "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can",
-  "contact support.": "neem contact op met de hulp desc.",
-  "Sign in with your Twitch or Youtube account to get started with Streamlabs": "Log in met je Twitch of Youtube account om te starten met streamlabs",
-  "Select an OBS profile to import": "Selecteer een OBS-profiel om te inporteren",
-  "Import from OBS": "Import from OBS",
-  "Start Fresh": "Start fris",
-  "Importing": "Inporteren",
-  "Successfully Imported": "Inporteren gelukt",
-  "Importing your scenes and sources": "Jou scenes en sources aan het inporteren",
-  "All scenes, sources and settings have been imported.": "All scenes, sources and settings have been imported.",
-  "Import your scenes and your settings from OBS with a simple click, or start fresh.": "Import your scenes and your settings from OBS with a simple click, or start fresh.",
-  "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.": "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.",
+  "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can": "We zijn onze backend-systemen aan het verbeteren, als onderdeel van het migratieproces moet u zich opnieuw aanmelden. Als u vragen hebt, kunt u",
+  "contact support.": "contact opnemen met de klantenservice.",
+  "Sign in with your Twitch or Youtube account to get started with Streamlabs": "Log in met uw Twitch of YouTube account om te starten met Streamlabs",
+  "Select an OBS profile to import": "Selecteer een OBS Studio profiel om te importeren",
+  "Import from OBS": "Importeer van OBS Studio",
+  "Start Fresh": "Begin schoon",
+  "Importing": "Importeren",
+  "Successfully Imported": "Succesvol geïmporteerd",
+  "Importing your scenes and sources": "Uw scènes en sources aan het importeren",
+  "All scenes, sources and settings have been imported.": "Alle scènes, bronnen en instellingen zijn geïmporteerd.",
+  "Import your scenes and your settings from OBS with a simple click, or start fresh.": "Importeer uw scènes en instellingen van OBS Studio met een enkele klik of begin als nieuw.",
+  "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.": "Klik hieronder en we zullen uw internetsnelheid en computer hardware testen voor de best mogelijke instellingen.",
   "Start": "Start",
-  "Rather do this manually?": "Rather do this manually?",
-  "Setup later": "Setup later",
-  "Detecting your location ...": "Detecting your location ...",
-  "Detected %{continent}": "Detected %{continent}",
-  "Performing bandwidth test ...": "Performing bandwidth test ...",
-  "Testing streaming encoder ...": "Testing streaming encoder ...",
-  "Testing recording encoder ...": "Testing recording encoder ...",
-  "Attempting stream ...": "Attempting stream ...",
-  "Reverting to defaults ...": "Reverting to defaults ...",
-  "Applying stream settings ...": "Applying stream settings ...",
-  "Applying general settings ...": "Applying general settings ...",
-  "Optimize": "Optimize",
-  "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "We're connecting to OBS and pulling your previous settings for a seamless conversion.",
-  "Initialzing ...": "Initialzing ...",
-  "Connecting to OBS ...": "Connecting to OBS ...",
-  "Pulling settings ...": "Pulling settings ...",
-  "Starting import ...": "Starting import ...",
-  "Finalizing ...": "Finalizing ...",
-  "We're analyzing your internet speed and computer hardware to give you the best settings possible.": "We're analyzing your internet speed and computer hardware to give you the best settings possible.",
-  "Done!": "Done!",
-  "Next": "Next",
-  "Scene Collections Import": "Scene Collections Import",
-  "The following scene collections have been imported from your Streamlabs account": "The following scene collections have been imported from your Streamlabs account",
-  "Continue": "Continue"
+  "Rather do this manually?": "Liever dit zelf doen?",
+  "Setup later": "Later instellen",
+  "Detecting your location ...": "Locatie detecteren...",
+  "Detected %{continent}": "%{continent} gedetecteerd",
+  "Performing bandwidth test ...": "Bandbreedte testen...",
+  "Testing streaming encoder ...": "Streaming encoder testen...",
+  "Testing recording encoder ...": "Opname encoder testen...",
+  "Attempting stream ...": "Stream uitproberen...",
+  "Reverting to defaults ...": "Naar standaardwaarden terugkeren...",
+  "Applying stream settings ...": "Stream instellingen toepassen...",
+  "Applying general settings ...": "Algemene instellingen toepassen...",
+  "Optimize": "Optimaliseren",
+  "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "We verbinden met OBS Studio om je instellingen over te zetten voor een naadloze overgang.",
+  "Initialzing ...": "Initialiseren...",
+  "Connecting to OBS ...": "Verbinden met OBS Studio...",
+  "Pulling settings ...": "Instellingen ophalen...",
+  "Starting import ...": "Import starten...",
+  "Finalizing ...": "Afronden...",
+  "We're analyzing your internet speed and computer hardware to give you the best settings possible.": "We gaan je internet snelheid en computer hardware testen om uw de beste mogelijke instellingen te geven.",
+  "Done!": "Gereed!",
+  "Next": "Volgende",
+  "Scene Collections Import": "Scène collecties importeren",
+  "The following scene collections have been imported from your Streamlabs account": "De volgende scène collecties zijn geimporteerd van uw Streamlabs account",
+  "Continue": "Doorgaan"
 }
