--- a/app/i18n/nl-NL/overlays.json
+++ b/app/i18n/nl-NL/overlays.json
@@ -1,8 +1,8 @@
 {
-  "Successfully saved %{filename}": "Succesvol opgeslagen %{filename}",
-  "Successfully loaded %{filename}.overlay": "Successfully loaded %{filename}.overlay",
-  "This is an experimental feature.  Use at your own risk.": "This is an experimental feature.  Use at your own risk.",
-  "Export Overlay File": "Export Overlay File",
-  "Import Overlay File": "Import Overlay File",
-  "Import Widget File in Current Scene": "Import Widget File in Current Scene"
+  "Successfully saved %{filename}": "%{filename} succesvol opgeslagen",
+  "Successfully loaded %{filename}.overlay": "%{filename}.overlay is succesvol ingeladen",
+  "This is an experimental feature.  Use at your own risk.": "Dit is een experimentele functie, gebruik op eigen risico.",
+  "Export Overlay File": "Exporteer Overlay Bestand",
+  "Import Overlay File": "Importeer Overlay Bestand",
+  "Import Widget File in Current Scene": "Importeer Widget bestand in huidge scène"
 }
